add_executable(01_704_binary-search 01_704_binary-search.cpp)
install(TARGETS 01_704_binary-search DESTINATION 01_Array)

add_executable(02_27_remove-element 02_27_remove-element.cpp)
install(TARGETS 02_27_remove-element DESTINATION 01_Array)

add_executable(03_977_squares-of-a-sorted-array
               03_977_squares-of-a-sorted-array.cpp)
install(TARGETS 03_977_squares-of-a-sorted-array DESTINATION 01_Array)
