add_executable(01_203_remove-linked-list-elements
               01_203_remove-linked-list-elements.cpp)
install(TARGETS 01_203_remove-linked-list-elements DESTINATION 02_LinkedList)

add_executable(02_707_design-linked-list 02_707_design-linked-list.cpp)
install(TARGETS 02_707_design-linked-list DESTINATION 02_LinkedList)
