add_executable(01_242_valid-anagram 01_242_valid-anagram.cpp)
install(TARGETS 01_242_valid-anagram DESTINATION 03_HashTable)

add_executable(02_349_intersection-of-two-arrays
               02_349_intersection-of-two-arrays.cpp)
install(TARGETS 02_349_intersection-of-two-arrays DESTINATION 03_HashTable)

add_executable(03_202_happy-number 03_202_happy-number.cpp)
install(TARGETS 03_202_happy-number DESTINATION 03_HashTable)

add_executable(04_1_two-sum 04_1_two-sum.cpp)
install(TARGETS 04_1_two-sum DESTINATION 03_HashTable)
