add_executable(01_242_valid-anagram 01_242_valid-anagram.cpp)
install(TARGETS 01_242_valid-anagram DESTINATION 03_HashTable)

add_executable(02_349_intersection-of-two-arrays
               02_349_intersection-of-two-arrays.cpp)
install(TARGETS 02_349_intersection-of-two-arrays DESTINATION 03_HashTable)

add_executable(03_202_happy-number 03_202_happy-number.cpp)
install(TARGETS 03_202_happy-number DESTINATION 03_HashTable)

add_executable(04_1_two-sum 04_1_two-sum.cpp)
install(TARGETS 04_1_two-sum DESTINATION 03_HashTable)

add_executable(05_454_4sum-ii 05_454_4sum-ii.cpp)
install(TARGETS 05_454_4sum-ii DESTINATION 03_HashTable)

add_executable(06_383_ransom-note 06_383_ransom-note.cpp)
install(TARGETS 06_383_ransom-note DESTINATION 03_HashTable)

add_executable(07_15_3sum 07_15_3sum.cpp)
install(TARGETS 07_15_3sum DESTINATION 03_HashTable)

add_executable(08_18_4sum 08_18_4sum.cpp)
install(TARGETS 08_18_4sum DESTINATION 03_HashTable)
