add_executable(01_344_reverse-string 01_344_reverse-string.cpp)
install(TARGETS 01_344_reverse-string DESTINATION 04_String)

add_executable(02_541_reverse-string-ii 02_541_reverse-string-ii.cpp)
install(TARGETS 02_541_reverse-string-ii DESTINATION 04_String)

add_executable(03_replace_number 03_replace_number.cpp)
install(TARGETS 03_replace_number DESTINATION 04_String)

add_executable(04_151_reverse-words-in-a-string
               04_151_reverse-words-in-a-string.cpp)
install(TARGETS 04_151_reverse-words-in-a-string DESTINATION 04_String)

add_executable(05_right-rotate-string 05_right-rotate-string.cpp)
install(TARGETS 05_right-rotate-string DESTINATION 04_String)

add_executable(06_28_find-the-index-of-the-first-occurrence-in-a-string
               06_28_find-the-index-of-the-first-occurrence-in-a-string.cpp)
install(TARGETS 06_28_find-the-index-of-the-first-occurrence-in-a-string
        DESTINATION 04_String)

add_executable(07_459_repeated-substring-pattern
               07_459_repeated-substring-pattern.cpp)
install(TARGETS 07_459_repeated-substring-pattern DESTINATION 04_String)
