add_executable(01_144_binary-tree-preorder-traversal
               01_144_binary-tree-preorder-traversal.cpp)
install(TARGETS 01_144_binary-tree-preorder-traversal DESTINATION 06_BinaryTree)

add_executable(02_94_binary-tree-inorder-traversal
               02_94_binary-tree-inorder-traversal.cpp)
install(TARGETS 02_94_binary-tree-inorder-traversal DESTINATION 06_BinaryTree)

add_executable(03_145_binary-tree-postorder-traversal
               03_145_binary-tree-postorder-traversal.cpp)
install(TARGETS 03_145_binary-tree-postorder-traversal
        DESTINATION 06_BinaryTree)

add_executable(04_102_binary-tree-level-order-traversal
               04_102_binary-tree-level-order-traversal.cpp)
install(TARGETS 04_102_binary-tree-level-order-traversal
        DESTINATION 06_BinaryTree)
