add_executable(01_144_binary-tree-preorder-traversal
               01_144_binary-tree-preorder-traversal.cpp)
install(TARGETS 01_144_binary-tree-preorder-traversal DESTINATION 06_BinaryTree)

add_executable(02_94_binary-tree-inorder-traversal
               02_94_binary-tree-inorder-traversal.cpp)
install(TARGETS 02_94_binary-tree-inorder-traversal DESTINATION 06_BinaryTree)

add_executable(03_145_binary-tree-postorder-traversal
               03_145_binary-tree-postorder-traversal.cpp)
install(TARGETS 03_145_binary-tree-postorder-traversal
        DESTINATION 06_BinaryTree)

add_executable(04_102_binary-tree-level-order-traversal
               04_102_binary-tree-level-order-traversal.cpp)
install(TARGETS 04_102_binary-tree-level-order-traversal
        DESTINATION 06_BinaryTree)

add_executable(05_107_binary-tree-level-order-traversal-ii
               05_107_binary-tree-level-order-traversal-ii.cpp)
install(TARGETS 05_107_binary-tree-level-order-traversal-ii
        DESTINATION 06_BinaryTree)

add_executable(06_199_binary-tree-right-side-view
               06_199_binary-tree-right-side-view.cpp)
install(TARGETS 06_199_binary-tree-right-side-view DESTINATION 06_BinaryTree)

add_executable(07_637_average-of-levels-in-binary-tree
               07_637_average-of-levels-in-binary-tree.cpp)
install(TARGETS 07_637_average-of-levels-in-binary-tree
        DESTINATION 06_BinaryTree)

add_executable(08_429_n-ary-tree-level-order-traversal
               08_429_n-ary-tree-level-order-traversal.cpp)
install(TARGETS 08_429_n-ary-tree-level-order-traversal
        DESTINATION 06_BinaryTree)

add_executable(09_515_find-largest-value-in-each-tree-row
               09_515_find-largest-value-in-each-tree-row.cpp)
install(TARGETS 09_515_find-largest-value-in-each-tree-row
        DESTINATION 06_BinaryTree)

add_executable(10_116_populating-next-right-pointers-in-each-node
               10_116_populating-next-right-pointers-in-each-node.cpp)
install(TARGETS 10_116_populating-next-right-pointers-in-each-node
        DESTINATION 06_BinaryTree)

add_executable(11_104_maximum-depth-of-binary-tree
               11_104_maximum-depth-of-binary-tree.cpp)
install(TARGETS 11_104_maximum-depth-of-binary-tree DESTINATION 06_BinaryTree)

add_executable(12_111_minimum-depth-of-binary-tree
               12_111_minimum-depth-of-binary-tree.cpp)
install(TARGETS 12_111_minimum-depth-of-binary-tree DESTINATION 06_BinaryTree)

add_executable(13_226_invert-binary-tree 13_226_invert-binary-tree.cpp)
install(TARGETS 13_226_invert-binary-tree DESTINATION 06_BinaryTree)

add_executable(14_101_symmetric-tree 14_101_symmetric-tree.cpp)
install(TARGETS 14_101_symmetric-tree DESTINATION 06_BinaryTree)
