add_executable(01_77_combinations 01_77_combinations.cpp)
install(TARGETS 01_77_combinations DESTINATION 07_Backtracking)

add_executable(02_216_combination-sum-iii 02_216_combination-sum-iii.cpp)
install(TARGETS 02_216_combination-sum-iii DESTINATION 07_Backtracking)

add_executable(06_131_palindrome-partitioning
               06_131_palindrome-partitioning.cpp)
install(TARGETS 06_131_palindrome-partitioning DESTINATION 07_Backtracking)

add_executable(07_93_restore-ip-addresses 07_93_restore-ip-addresses.cpp)
install(TARGETS 07_93_restore-ip-addresses DESTINATION 07_Backtracking)

add_executable(08_78_subsets 08_78_subsets.cpp)
install(TARGETS 08_78_subsets DESTINATION 07_Backtracking)
